// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Combobox /> > Generated Snapshots > AdjustedWidth story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_6l_"
      id="headlessui-label-_r_6k_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_6q_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_6n_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_6k_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_6l_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_6n_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_6k_ headlessui-combobox-button-_r_6m_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_6m_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Default story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_3_"
      id="headlessui-label-_r_2_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_8_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_5_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_2_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_3_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_5_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_2_ headlessui-combobox-button-_r_4_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_4_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Error story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open invalid"
  data-invalid=""
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_85_"
      id="headlessui-label-_r_84_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Required)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--error_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_8a_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_87_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_84_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open invalid focus"
      data-invalid=""
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_85_"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_87_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_84_ headlessui-combobox-button-_r_86_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active invalid hover"
      data-hover=""
      data-invalid=""
      data-open=""
      id="headlessui-combobox-button-_r_86_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > HorizontalLabel story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-horizontal_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_13_"
      id="headlessui-label-_r_12_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Animal?
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_18_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_15_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_12_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_13_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_15_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_12_ headlessui-combobox-button-_r_14_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_14_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Immediate story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_j_"
      id="headlessui-label-_r_i_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_o_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_l_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_i_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_j_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_l_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_i_ headlessui-combobox-button-_r_k_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_k_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithChipIcons story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[320px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_4j_"
      id="headlessui-label-_r_4i_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--has-chips_ff8210"
  >
    <ul
      class="_combobox-input__chips_ff8210"
    >
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8 _input-chip__leading-component_f95fba"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
              />
            </svg>
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Dogs
            </span>
          </div>
          <button
            class="_input-chip__action-button_f95fba"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Dogs
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8 _input-chip__leading-component_f95fba"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
              />
            </svg>
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Cats
            </span>
          </div>
          <button
            class="_input-chip__action-button_f95fba"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Cats
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-_r_4o_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_4l_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_4i_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_4j_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_4l_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_4i_ headlessui-combobox-button-_r_4k_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_4k_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithManySelected story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_43_"
      id="headlessui-label-_r_42_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--has-chips_ff8210"
  >
    <ul
      class="_combobox-input__chips_ff8210"
    >
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Dogs
            </span>
          </div>
          <button
            class="_input-chip__action-button_f95fba"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Dogs
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Cats
            </span>
          </div>
          <button
            class="_input-chip__action-button_f95fba"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Cats
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Birds
            </span>
          </div>
          <button
            class="_input-chip__action-button_f95fba"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Birds
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Rabbits
            </span>
          </div>
          <button
            class="_input-chip__action-button_f95fba"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Rabbits
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-_r_48_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_45_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_42_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_43_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_45_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_42_ headlessui-combobox-button-_r_44_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_44_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithoutChips story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_53_"
      id="headlessui-label-_r_52_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_58_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_55_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_52_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_53_"
      placeholder="1 selected"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_55_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_52_ headlessui-combobox-button-_r_54_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_54_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > NoVisibleLabel story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_99_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_96_"
      aria-expanded="true"
      aria-label="hidden label"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_94_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_96_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_95_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > NoVisibleLabelButRequired story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210 _combobox__overline--no-label_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_9k_"
      id="headlessui-label-_r_9j_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      />
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_9p_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_9m_"
      aria-expanded="true"
      aria-label="hidden label"
      aria-labelledby="headlessui-label-_r_9j_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_9k_"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_9m_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_9j_ headlessui-combobox-button-_r_9l_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_9l_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Optional story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_7l_"
      id="headlessui-label-_r_7k_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Optional)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_7q_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_7n_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_7k_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_7l_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_7n_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_7k_ headlessui-combobox-button-_r_7m_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_7m_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Required story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_75_"
      id="headlessui-label-_r_74_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Required)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_7a_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_77_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_74_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_75_"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_77_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_74_ headlessui-combobox-button-_r_76_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_76_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Warning story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_8l_"
      id="headlessui-label-_r_8k_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Optional)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--warning_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_8q_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_8n_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_8k_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_8l_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_8n_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_8k_ headlessui-combobox-button-_r_8m_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_8m_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithFieldName story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_2j_"
      id="headlessui-label-_r_2i_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Additional descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_2o_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_2l_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_2i_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_2j_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_2l_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_2i_ headlessui-combobox-button-_r_2k_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_2k_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithFieldNote story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_33_"
      id="headlessui-label-_r_32_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_38_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_35_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_32_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_33_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_35_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_32_ headlessui-combobox-button-_r_34_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_34_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithPlaceholder story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_3j_"
      id="headlessui-label-_r_3i_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_3o_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_3l_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_3i_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_3j_"
      placeholder="Search animals"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_3l_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_3i_ headlessui-combobox-button-_r_3k_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_3k_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithRenderProp story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_5j_"
      id="headlessui-label-_r_5i_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_5o_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_5l_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_5i_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      id="headlessui-combobox-input-_r_5j_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_5l_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_5i_ headlessui-combobox-button-_r_5k_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_5k_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
  <p
    class="mt-spacing-size-1"
  >
    Picking
    : 
    Dogs
  </p>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithSelectedBy story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_23_"
      id="headlessui-label-_r_22_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_2a_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_25_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_22_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_23_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Cats"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_25_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_22_ headlessui-combobox-button-_r_24_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_24_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithSelectedOption story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_1j_"
      id="headlessui-label-_r_1i_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_1q_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_1l_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_1i_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_1j_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Cats"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_1l_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_1i_ headlessui-combobox-button-_r_1k_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_1k_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithTruncation story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[160px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_63_"
      id="headlessui-label-_r_62_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_68_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_65_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_62_"
      class="_combobox-input__field_ff8210 _combobox-input__field--truncated_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_63_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="A very long option label that will not fit"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_65_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_62_ headlessui-combobox-button-_r_64_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_64_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
